--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,5 @@ jobs:
           script: |
             echo "Deploying changes"
             cd /strideethiopia/heca
-            
-            # Pull changes from master
-            git pull
+            echo "${{ secrets.EC2_SSH_PASS }}" | sudo -S git pull
+
